lab3/labrep.yaml
apiVersion: v1
kind: Service
metadata:
  name: labrep
spec:
  selector:
    app: labrep
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
