lab3/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
spec:
  rules:
  - host: lab3000.com
    http:		
      paths:
      - path: /
        pathType: Prefix	
        backend:  	
          service:
            name: labrep
            port:
              number: 80
